# ogphelper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ogphelper/: __init__.py  cli.py
src/ogphelper/domain/: __init__.py  demand.py  models.py  policies.py
src/ogphelper/output/: __init__.py  debug_generator.py  pdf_generator.py
src/ogphelper/scheduling/: __init__.py  candidate_generator.py  cpsat_solver.py  demand_aware_scheduler.py  heuristic_solver.py  scheduler.py  weekly_scheduler.py
src/ogphelper/validation/: __init__.py  validator.py
tests/: __init__.py  test_5am_job_preservation.py  test_candidate_generator.py  test_demand_aware.py  test_job_eligibility.py  test_policies.py  test_smoke.py  test_validation.py  test_weekly_scheduling.py
